more on download estimate

--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -32,7 +32,7 @@ In order to determine potential sources of Research Objects we will start with t
 Each of the citing articles will then be assessed to see if they have openly accessible research objects that are possible to identify, and ideally retrieve, by building a programmatic crawler. Ideally such access would use an open harvesting protocol like [OAI-PMH](http://www.openarchives.org/OAI/2.0/openarchivesprotocol.htm) or [ResourceSync](http://www.openarchives.org/rs/1.1/resourcesync), but it is predicted that in the majority of cases custom crawler code will need to be developed per repository, in addition to manual harvesting of identifiers for smaller collections and individual Research Objects. 
 
 #### Keyword searches
-
+7
 In addition to this "self-claimed" research object usage we will search in more general repositories by developing a list of keywords like "research object", "robundle" or the RO vocabulary URLs. We will search in at least:
 
 * <https://github.com/>
@@ -219,7 +219,7 @@ In brief the prototype workflow consists of these steps:
 2. Extract the URI for the Zenodo record, e.g. <oai:zenodo.org:1484341>
 3. Search-replace to build the URI of the the corresponding Zenodo landing page, e.g. <https://zenodo.org/record/2838898>
 4. Retrieve the HTML of the landing page
-5. Extract the [link relations](https://tools.ietf.org/html/rfc8288) of type [alternate](https://html.spec.whatwg.org/multipage/links.html#rel-alternate) to find the download links
+5. Extract the [link relations](https://tools.ietf.org/html/rfc8288) [@doi:10.17487/RFC8288] of type [alternate](https://html.spec.whatwg.org/multipage/links.html#rel-alternate) to find the download links
 6. Filter for download links that end with `*.zip`
 7. Retrieve ZIP file
 8. List filenames within ZIP file
@@ -234,7 +234,7 @@ In developing this prototype several challenges where immediately detected:
 * The HTML landing page provides links to structured metadata, e.g. as JSON-LD using Schema.org <https://zenodo.org/record/1310621/export/schemaorg_jsonld> but the structured data is included in a `<pre>` block within HTML (for copy-pasting) and not programmatically accessible. HTTP content-negotiation does not give direct access to the structured data.  There are no `alternate` links from the HTML landing page to these "export" pages, so their URIs would have to be manually constructed. 
   * The JSON-LD does include links to downloads of ZIP files etc, but only if the Record is of type _Dataset_ in Zenodo, which [in JSON-LD](https://zenodo.org/record/2838898/export/schemaorg_jsonld#.XXdwzffTU5k) is represented as a [DataDownload](http://schema.org/DataDownload) with a [contentUrl](http://schema.org/contentUrl)
 * To list filename contained in a ZIP file, the whole file must be downloaded because in the [ZIP format](https://pkware.cachefly.net/webdocs/casestudies/APPNOTE.TXT) the table of content is written at the end of the file
-  * The host providing Zenodo downloads do not support the [HTTP Range](https://tools.ietf.org/html/rfc7233) request header, so it is not possible to download say only the last 128 kB of the ZIP file.
+  * The host providing Zenodo downloads do not support the [HTTP Range](https://tools.ietf.org/html/rfc7233) request header [@doi:10.17487/RFC7233], so it is not possible to download say only the last 128 kB of the ZIP file.
   * Some of the dataset downloads are larger than 1 GB
   * `cwltool` saves all intermediate values until the end of the workflow
 * To preserve disk space use during download of ZIP file only, an initial idea was explored of using the CWL [streamable](https://www.commonwl.org/v1.1/CommandLineTool.html#CommandOutputRecordField) feature so that the output of `curl` could be passed to the utillity [sunzip](https://github.com/madler/sunzip) which can extract/inspect ZIP files in a streaming fashion
@@ -243,7 +243,92 @@ In developing this prototype several challenges where immediately detected:
   * The experimental feature however detected that several files found in Zenodo are written with a "deferred length" - the intermitting ZIP records do not record their length and so `sunzip` is unable to find the offset to the next record without actually decompressing the stream.
   * It was found that `cwltool --parallel`  did not seem to start the subsequent step and thus did not facilitate the `streamable` feature. The ZIP files were still saved to disk, and all the ZIP file downloads where completed before any of the ZIP extraction was started.  Future work will explore using the implementation `toil` which have been argued to have better support for concurrency.
 
-<!--
+#### Estimating bandwidth and storage requirements
+
+In order to estimate the bandwidth and storage requirements for
+executing the above prototype workflow across the whole of Zenodo,
+a shell script approach was used to retrieve and analyse the JSON
+for each Zenodo record, which include information on downloadable 
+filename, extension and file size.
+
+To retrieve these it was deemed necessary to use 
+the [undocumented](https://github.com/zenodo/zenodo/issues/1426) parts of [Zenodo API](https://developers.zenodo.org/).
+From the [Zenodo source code](https://github.com/zenodo/zenodo/blob/deploy-qa-2019-09-19-0735/zenodo/config.py#L814)
+it was identified that the REST template `https://zenodo.org/api/records/{pid_value}` could be used with `pid_value` 
+as the numeric part from the OAI-PMH identifier, e.g. for `oai:zenodo.org:1310621` the Zenodo JSON can be retrieved
+at <https://zenodo.org/api/records/1310621>.
+
+The JSON API supports content negotiation, the content-types supported as of 2019-09-20 include:
+* `application/vnd.zenodo.v1+json` giving the Zenodo record in Zenodo's [internal JSON schema](https://github.com/zenodo/zenodo/blob/deploy-qa-2019-09-19-0735/zenodo/modules/records/serializers/schemas/json.py#L267) (v1)
+* `application/ld+json` giving [JSON-LD](https://www.w3.org/TR/2014/REC-json-ld-20140116/) Linked Data using the <http://schema.org/> vocabulary
+* `application/x-datacite-v41+xml` giving DataCite v4 XML [@doi:10.5438/0012] 
+* `application/marcxml+xml` giving [MARC](http://www.loc.gov/standards/marcxml/) 21 XML
+
+Using these (currently) undocumented parts of the Zenodo API thus avoids
+the need for HTML scraping while also giving individual complete records
+that are suitable to redistribute as records in a filtered dataset.
+
+This preliminary exploration will be adapted into the reproducible CWL
+workflow. Below is a bash transcript. Execution time was about 3 days
+from a server at the University of Manchester network on a single 1 GBps
+network link.  The script does:
+
+* Retrieve each of the first 3.5 million Zenodo records  
+  as Zenodo JSON
+  by iterating over possible numeric IDs
+  (current maximum ID `3450000` estimated from ["Recent uploads"](https://zenodo.org/))
+* Filter list to exclude records that are not found, 
+  moved or deleted. The presence of the key `conceptrecid` is used as marker.
+* Use [jq](https://stedolan.github.io/jq/manual/v1.5/) to ensure
+  the JSON is on a single line
+* Join the JSON files using the ASCII Record Separator (RS, `0x1e`)
+  to make a `application/json-seq` JSON text sequence [@doi:10.17487/RFC7464] stream
+* Save the JSON stream as a single compressed file using `xz
+* From the JSON, select those records that indicate
+  `{ "metadata": { "access_right": "open"} }`
+* Select   
+
+```bash
+## Naively Download first 3450000 records (many of are 404)
+# TODO: Run from OAI-PMH ids to avoid 404
+# TODO: Respect Retry and X-Ratelimit headers (this only overrun once)
+# TODO: Parallelize 2-3 threads so it does not take 3 days
+curl --retry 10 -H "Accept: application/vnd.zenodo.v1+json" \
+  'https://zenodo.org/api/records/[1-3450000]' -o "record_#1.json"
+
+# Ignore "404" etc.
+# Convert to 
+find . -maxdepth 1 -type f -name 'record*json' | \
+  xargs -n32 cat | \
+  jq -c .  | \
+  grep conceptrecid | \
+  sed `echo -e "s/^/\x1e/g"` | \
+  xz -4 -T5 > records-with-conceptrecid.jsonseq.xz
+
+xzcat records-wtih-conceptrecid.jsonseq.xz |  \
+  jq '. | select(.metadata.access_right == "open") | \.files[]? | 
+     select(.type == "zip") | reduce .size as $s (0; . + $s)' | \
+  jq --slurp add
+# 27620751244752
+```
+
+This indicates that downloading all the *.zip files is about 27 TiB.
+
+```
+jq -n '27620751244752 / 1024 / 1024 / 73.9 / 3600 / 24'
+# 4.125507608812889
+```
+
+Downloading all will take at least 4 days assuming 73.9 MBit/s
+as measured using `wget` of a [9 GB file](https://zenodo.org/api/files/2cdaea21-80be-48b9-9ab2-259671795f7a/br20832_cores.zip) - 
+it is predicted that actual download time may be doubled because
+of the effect of latency on shorter downloads, which will not
+be able to saturate the link speed before the download is complete.
+
+
+(random notes below)
+
+```
 TODO: 
 
 - Create PROV entities for each record, download, manifest, datacite etc.
@@ -252,12 +337,6 @@ TODO:
 
 
 Some of the commands..
-
-## Download all records (many of are 404)
-# TODO: Run from OAI-PMH ids to avoid 404
-# TODO: Respect Retry and X-Ratelimit headers
-# TODO: Parallelize 2-3 threads so it does not take 3 days
-curl --retry 10 -H "Accept: application/vnd.zenodo.v1+json" 'https://zenodo.org/api/records/[1-3450000]' -o "record_#1.json"
 
 # TODO: Consistency check of records
 find . -maxdepth 1 -type f -name 'record*json' | xargs grep ^.."status.*404" | cut -d ":" -f 1 | xargs mv -t 404/
@@ -394,7 +473,7 @@ xzcat < records.jsonseq.xz | jq --seq --raw-output '.files[]?.key'  > deposit_fi
 # Build a jsonseq with only json records containing "conceptrecid" (avoiding "moved" and "not found" etc)
 # (avoids the previous naive 404 filtering)
 
-find . -maxdepth 1 -type f -name 'record*json' | xargs -n32 cat | jq -c .  | grep conceptrecid| sed `echo -e "s/^/\x1e/g"` | xz -4 -T5 > records-with-conceptrecid.jsonseq.xz
+
 
 # Look for *.zip file that are open to download
 
@@ -403,10 +482,4 @@ xzcat records-wtih-conceptrecid.jsonseq.xz |  jq '. | select(.metadata.access_ri
 27620751244752
 
 (aka 27 TiB)
-
-
-
-
-
--->
-
+```
