--- a/content/20.protocol.md
+++ b/content/20.protocol.md
@@ -308,7 +308,7 @@ find . -maxdepth 1 -type f -name 'record*json' | \
   xz -4 -T5 > records-with-conceptrecid.jsonseq.xz
 
 xzcat records-wtih-conceptrecid.jsonseq.xz |  \
-  jq '. | select(.metadata.access_right == "open") | \.files[]? | 
+  jq '. | select(.metadata.access_right == "open") | .files[]? | 
      select(.type == "zip") | reduce .size as $s (0; . + $s)' | \
   jq --slurp add
 # 27620751244752
